LIST OF CHANGES

 - Switched the default LIMS driver in samplesheet generation from 'xml'
   to 'ml_warehouse'.
 - Added 'lims_driver_type' attribute to npg::samplesheet.
 - Updated the tests for samplesheet generation, which are using the xml
   LIMS driver, to set the driver type explicitly.

release 96.0.0
 - Fixed a regression in the npg_move_runfolder script,
   which made it unusable.
 - Rejig run folder tracking function into method
 - Stop using XML LIMS data in a test
 - Import samplesheet daemon
 - Ensure we have a loader to generate ORM classes
 - Flagged planned onboard analysis
 - locate_runfolder: simplify, cope with complex globs, link page for multiple
   locations
 - Allow NovaSeqX samplesheets to embed instrument and slot

release 95.0.0
 - Remove singularity recipe and related files
 - Import mlwh drivers
 - Reimplemented waiting for the onboard analysis
 - Added a samplesheet generator for NovaSeqX

release 94.0.1
 - Fixed bugs in the staging area daemon script:
   - an incorrect method name
   - use of previously deleted method

release 94.0.0
 - Added checks for on-board analysis in progress
 - Improved logging for a long wait case
 - Simplified run complete and mirrored detection
 - Simplified the staging area daemon.
   Bring the code in accordance with the current practice:
   - consider only one staging area,
   - narrow down the glob pattern for areas below the staging
     area to 'IL*'.
 - Removed roles which defined attributes that were used
   in one class only.
 - Changed the way the connection to the database is established
   by the staging monitor. Set up the connection explicitly in
   the script rather than inside one of the classess.

release 93.0.0
 - Introduced a new instrument format database record for NovaSeqX,
   updated test data and one of the tests. 
 - Fixed visual representation for 'cBot 2' model:
     the instrument now appears in the visual listing,